<?xml version="1.0"?>
<package format="2">
  <name>rviz_visual_tools</name>
  <version>3.7.0</version>
  <description>Utility functions for displaying and debugging data in Rviz via published markers</description>

  <maintainer email="dave@picknik.ai">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/PickNikRobotics/rviz_visual_tools</url>
  <url type="butracker">https://github.com/PickNikRobotics/rviz_visual_tools/issues</url>
  <url type="repository">https://github.com/PickNikRobotics/rviz_visual_tools/</url>

  <author email="dave@picknik.ai">Dave Coleman</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rviz_ogre_vendor</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>eigen_stl_containers</depend>
  <depend>interactive_markers</depend>

  <depend>tf2_geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>

  <!-- Something changed in ROS Lunar / Ubuntu Zesty that requires extra QT5 dependency-->
  <!-- I suspect this depend is more than needed, but was the only dependency available -->
  <!-- from the rosdep list that worked: https://github.com/ros/rosdistro/blob/master/rosdep/base.yaml -->
  <depend>libqt5x11extras5-dev</depend>

  <!-- <depend>eigen_conversions</depend> -->
  <!-- <depend>tf_conversions</depend> -->
  <!-- <depend>graph_msgs</depend> -->
  <!-- <depend>roslint</depend> -->
  <!-- <depend>libogre-dev</depend> -->

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>eigen</build_depend>

  <build_export_depend>eigen</build_export_depend>

  <!-- Boilerplate from rviz_default_plugins might not be necessary -->
  <!-- <exec_depend>libqt5-core</exec_depend> -->
  <!-- <exec_depend>libqt5-gui</exec_depend> -->
  <!-- <exec_depend>libqt5-opengl</exec_depend> -->
  <exec_depend>libqt5-widgets</exec_depend>

  <!-- Launch files -->
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <rviz plugin="${prefix}/plugin_description.xml"/> -->
  </export>

</package>
