<?xml version="1.0"?>
<package format="3">
  <name>rviz_visual_tools</name>
  <version>4.1.4</version>
  <description>Utility functions for displaying and debugging data in Rviz via published markers</description>

  <maintainer email="mike@picknik.ai">Mike Lautman</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/PickNikRobotics/rviz_visual_tools</url>
  <url type="bugtracker">https://github.com/PickNikRobotics/rviz_visual_tools/issues</url>
  <url type="repository">https://github.com/PickNikRobotics/rviz_visual_tools/</url>

  <author email="mike@picknik.ai">Mike Lautman</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rviz_common</depend>
  <depend>rviz_ogre_vendor</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz_default_plugins</depend>
  <depend>pluginlib</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>eigen_stl_containers</depend>
  <depend>interactive_markers</depend>

  <depend>tf2_geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>eigen</build_depend>

  <build_export_depend>eigen</build_export_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <!-- Launch files -->
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <rviz plugin="plugin_description.xml"/>
    <build_type>ament_cmake</build_type>
  </export>

</package>
